# CortexMind

./: .gitignore  CMakeLists.txt  CortexMind.slnx  CortexMind.vcxproj  CortexMind.vcxproj.filters  README.md  docs.md
.github/: LICENSE.md
cmake/: CUDA.cmake  Dependencies.cmake  compile.cmake  compiler.cmake  targets.cmake  tests.cmake
include/CortexMind/: cortexmind.hpp
include/CortexMind/DataPrep/: data.hpp  image_data.hpp  tokenizer.hpp
include/CortexMind/Mind/ActivationFunc/: activation.hpp  relu.hpp  tanh.hpp
include/CortexMind/Mind/LossFunc/: loss.hpp  mae.hpp  mse.hpp
include/CortexMind/Mind/Model/: model.hpp  sequential.hpp
include/CortexMind/Mind/NeuralNetwork/: batch_norm.hpp  conv.hpp  dense.hpp  layer.hpp
include/CortexMind/Mind/OptimizerFunc/: adam.hpp  optimizer.hpp  sgd.hpp
include/CortexMind/Model/Layers/: layer.hpp
include/CortexMind/Model/Loss/: loss.hpp
include/CortexMind/Model/Model/: model.hpp
include/CortexMind/Model/Optimizer/: optimizer.hpp
include/CortexMind/Utils/: log.hpp  params.hpp
include/CortexMind/Utils/ImageData/: image_data.hpp
include/CortexMind/Utils/MathTools/: kernel.hpp  random.hpp  random_weight.hpp
include/CortexMind/Utils/TextData/: tokenizer.hpp
source/CortexMind/core/Graph/: flow.cpp  flow.hpp  flow_ops.cpp  flow_ops.hpp  ops.cpp  ops.hpp
source/CortexMind/core/Kernels/: activation.cuh  kernel.cpp  kernel.hpp  matrix.cuh  reduce.cuh  scalar.cuh
source/CortexMind/core/Net/: callback.cpp  callback.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  optimization.cpp  optimization.hpp
source/CortexMind/core/Params/: params.hpp
source/CortexMind/core/Tools/: broadcast.hpp  debug.hpp  defaults.hpp  err.cpp  err.hpp  error.hpp  file_system.hpp  image.cpp  image.hpp  loop.h  operations.h  ops.h  ops.hpp  params.hpp  ref.hpp  restrict.hpp  tensor_utils.hpp  throw.cpp  throw.hpp  utilities.cuh  utilities.hpp  utils.cuh  utils.hpp  warn.hpp
source/CortexMind/dataset/: circle.hpp  dataset.cpp  spiral.cpp  spiral.hpp  two_moons.cpp  two_moons.hpp
source/CortexMind/dataset/Frame/: df.cpp  df.hpp
source/CortexMind/dataset/Manager/: data.cpp  data.hpp
source/CortexMind/dataset/ProcessedDataset/: circle.cpp  circle.hpp  spiral.cpp  spiral.hpp  two_moons.cpp  two_moons.hpp
source/CortexMind/datasets/: scale.cpp  scale.hpp
source/CortexMind/framework/AVX2/: avx2.hpp
source/CortexMind/framework/Array/: array.hpp
source/CortexMind/framework/Assert/: assert.hpp
source/CortexMind/framework/Benchmark/: bench_output.hpp  pref.cpp  pref.hpp
source/CortexMind/framework/Dispatch/: activation.cpp  activation.hpp  activation_operations.cpp  activation_operations.hpp  elem_wise_operations.cpp  elem_wise_operations.hpp  matrix.cpp  matrix.hpp  matrix_operations.cpp  matrix_operations.hpp  reduce.cpp  reduce.hpp  reduce_operations.cpp  reduce_operations.hpp  scalar.cpp  scalar.hpp  scalar_operations.cpp  scalar_operations.hpp  txl.hpp  wise.cpp  wise.hpp
source/CortexMind/framework/ErrorSystem/: debug.hpp
source/CortexMind/framework/Gradient/: flow.cpp  flow.hpp  operations.cpp  operations.hpp  pack.hpp  saved_tensor.hpp
source/CortexMind/framework/Init/: init.hpp
source/CortexMind/framework/Kernel/: kernel.cpp  kernel.hpp
source/CortexMind/framework/Log/: log.hpp
source/CortexMind/framework/Memory/: arena.hpp  device.hpp  device_type.hpp  forge.cu  forge.cuh  forge.hpp  mem.cpp  mem.hpp  transform.cu  transform.cuh  transform.hpp
source/CortexMind/framework/Net/: activ.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  metric.cpp  metric.hpp  optim.hpp  optimization.cpp  optimization.hpp
source/CortexMind/framework/NetBase/: activation.hpp  layer.hpp  loss.hpp  optimizer.hpp
source/CortexMind/framework/Params/: params.hpp
source/CortexMind/framework/STF/: scalar.hpp
source/CortexMind/framework/Shape/: shape.cpp  shape.hpp
source/CortexMind/framework/Storage/: operators.cpp  stor.cpp  stor.hpp
source/CortexMind/framework/Tensor/: operators.cpp  tensor.cpp  tensor.hpp  var.cpp  var.hpp
source/CortexMind/framework/Tools/: alignment.cpp  alignment.hpp  as_string.cpp  as_string.hpp  benchmark_utils.cpp  benchmark_utils.hpp  broadcast_info.hpp  broadcast_kind.hpp  cuda.cu  cuda.cuh  device_as_string.cpp  device_as_string.hpp  dtype.hpp  err.cpp  err.cu  err.hpp  kernel_operations.hpp  logger.cpp  logger.hpp  loop.hpp  memory_utils.cpp  memory_utils.hpp  params.hpp  ref.hpp  series.cpp  series.hpp  tensor_debug.cpp  tensor_debug.hpp  tensor_meta.cpp  tensor_meta.hpp  tensor_utils.cpp  tensor_utils.hpp  types.hpp
source/CortexMind/framework/Variable/: var.cpp  var.hpp
source/CortexMind/models/: model.hpp
source/CortexMind/models/GradientBoosting/: grad_boost.cpp  grad_boost.hpp
source/CortexMind/net/: pch.hpp
source/CortexMind/platform/: cuda.hpp  simd.hpp
source/CortexMind/runtime/: compile_flags_check.hpp  ctx.cpp  ctx.h  curand.cu  curand.cuh  macros.hpp  provider.cu  provider.cuh  rand.cu  rand.cuh
source/CortexMind/tools/: arithmetic_operations.cpp  arithmetic_operations.hpp  cast.hpp  comparison_operations.cpp  comparison_operations.hpp  cpp_version.cpp  cpp_version.hpp  cuda.cuh  defaults.hpp  describe.cpp  describe.hpp  device.hpp  devices.hpp  funcs.cpp  funcs.hpp  is_avx2_available.cpp  is_avx2_available.hpp  is_cuda_available.cpp  is_cuda_available.hpp  load.cpp  load.hpp  log.hpp  math.cpp  math.hpp  params.hpp  pch.hpp  println.hpp  tensor_info.cpp  tensor_info.hpp  tensor_meta.cpp  tensor_meta.hpp  types.hpp  values.hpp  version.cpp  version.hpp
source/CortexMind/utility/: cast.cpp  cast.hpp
source/CortexMind/utils/: pch.hpp
source/core/Graph/: meta.hpp
source/core/Net/: layer.hpp
source/core/Params/: params.hpp
source/core/Tools/: debug.hpp
source/tools/: log.hpp  macro.hpp  version.hpp
src/CortexMind/DataPrep/: data.cpp  image_data.cpp  tokenizer.cpp
test/: cuda_g_test.cpp  cuda_g_test.cu  cxm.cpp  g_test.cpp  main.cpp  main_test.cpp  mind.cpp  model.json  test.cpp
test/archive/: student_test.csv  test.csv  train.csv  train2.csv
test/model/: map.json
(+431 files in other folders)
